configsync/tenants/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: test
  labels:
    # tenant-ns: "true"
    # version must match the ASM control plane revision
    istio.io/rev: asm-110 # kpt-set: ${istio-revision}
